# getIntoMetalDev

01 HelloTriangle/HelloTriangle/: ._ContentView.swift  definitions.h
01 HelloTriangle/HelloTriangle.xcodeproj/: ._project.xcworkspace
02 Transformations/Finished/: ._Transformations.xcodeproj
03 Obj Models/finished/: ._Project.xcodeproj
03 Obj Models/start/: ._Project.xcodeproj
04 Gestures/start/: ._Project.xcodeproj
Metal1/: ._Metal1.xcodeproj
Metal1/Metal1/: ._Metal1App.swift  ._MetalView.swift  ._Renderer.swift  Metal1App.swift  MetalView.swift  Renderer.swift
Metal1/Metal1.xcodeproj/: ._project.xcworkspace  project.pbxproj
Metal2/: ._Metal2.xcodeproj
Metal2/Metal2/: ._ContentView.swift  ._Metal2App.swift  ._MetalView.swift  ._Renderer.swift  ._shaders.metal  ContentView.swift  Metal2App.swift  MetalView.swift  Renderer.swift  (+1 more)
Metal2/Metal2.xcodeproj/: project.pbxproj
Metal3/: ._Metal3.xcodeproj
Metal4/: ._Transformations.xcodeproj
cpp/10-qol-refactors/: CMakeLists.txt  readme.md
cpp/10-qol-refactors/spec/: mesh.puml  model_classes.puml  vertex_formats.puml
cpp/10-qol-refactors/src/: config.h
cpp/10-qol-refactors/src/backend/: glfw_adapter.h  mtlm.cpp
cpp/10-qol-refactors/src/control/: app.cpp  app.h
cpp/10-qol-refactors/src/model/: camera.cpp  camera.h
cpp/10-qol-refactors/src/view/: mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  pipeline_factory.h  renderer.cpp  vertex_formats.cpp  vertex_formats.h
cpp/cmake example/: CMakeLists.txt
cpp/cmake example/src/: main.cpp
cpp/cmake example/src/backend/: glfw_adapter.mm
(+506 files in other folders)
